--- a/Final PItch/1/Pages/1/1.4/1.5/1.6/2/4/5/6/7/index.html
+++ b/Final PItch/1/Pages/1/1.4/1.5/1.6/2/4/5/6/7/index.html
@@ -7,17 +7,15 @@
 	<title>Document</title>
 </head>
 <body>
-	<nav>
-		<div class="logo">
-			<h4>[Ayanfe]:)</h4>
-		</div>
-		<ul class="nav-links">
-			<li><a href="./8/index.html">Next</a></li>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Contact</a></li>
+	<header>
+		<a href="#" class="logo">[Ayanfe]:)</a>
+		<ul>
+			<li><a href="./8/index.html" class="active">Next</a></li>
+			<li><a href="/Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html">Home</a></li>
+			<li><a href="/Users/ayanfe/Desktop/About/index.html">About</a></li>
+			<li><a href="/Users/ayanfe/Desktop/Contact/index.html">Contact</a></li>
 		</ul>
-	</nav>
+	</header>
 	<h1 class="title">Example #3</h1>
 	<div class="Hover">Hover Function</div>
 	<div class="image-container">
