--- a/Final PItch/1/index.html
+++ b/Final PItch/1/index.html
@@ -7,31 +7,33 @@
 	<link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+	<div class="content-wrapper">
 	<div class="loader"></div>
 	<header>
 		<a href="#" class="logo">[Ayanfe]:)</a>
 		<ul>
 			<li><a href="./Pages/1/index.html" class="active">Next</a></li>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="/Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html">Home</a></li>
+			<li><a href="/Users/ayanfe/Desktop/About/index.html">About</a></li>
+			<li><a href="/Users/ayanfe/Desktop/Contact/index.html">Contact</a></li>
 		</ul>
 	</header>
 
 	<main>
+
+<div class="content-wrapper">
   <a href="#" class="card">
       <div class="inner">
-        <time class="subtitle">Before I delve into my pitch, I think its important to acknowledge that present me is much different from younger me. Growing up, I was extroverted, trusting and extremely open to people. As life progressed the realities of the world became more apparent and the world that lived inside my head became a lot more attractive.<time>
+        <div class="subtitle">Before I delve into my pitch, I think its important to acknowledge that present me is much different from younger me. Growing up, I was extroverted, trusting and extremely open to people. As life progressed the realities of the world became more apparent and the world that lived inside my head became a lot more attractive.</div>
         	<br>
         	<br>
 
-        <time class="Key">Keyword: Escapism<time>
+        <div class="Key">Keyword: Escapism</div>
 
 
       </div>
-
-  
-  </a>
+    </a>
+</div>
 	
 </body>
 </html>
