--- a/Final PItch/index.html
+++ b/Final PItch/index.html
@@ -7,13 +7,14 @@
 	<link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+ <div class="content-wrapper">	
 	<header>
 		<a href="#" class="logo">[Ayanfe]:)</a>
 		<ul>
 			<li><a href="./1/index.html" class="active">Next</a></li>
 			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="/Users/ayanfe/Desktop/About/index.html">About</a></li>
+			<li><a href="/Users/ayanfe/Desktop/Contact/index.html">Contact</a></li>
 		</ul>
 	</header>
 
@@ -33,7 +34,7 @@
 		    <div class="Rave"></div>
 		    <div class="photo"></div>
 	</div>
-
+</div>
 
 	
 </body>
