--- a/Final PItch/1/Pages/1/1.4/1.5/1.6/2/4/5/6/7/8/9/10/10.1/11/12/13/index.html
+++ b/Final PItch/1/Pages/1/1.4/1.5/1.6/2/4/5/6/7/8/9/10/10.1/11/12/13/index.html
@@ -10,10 +10,10 @@
 	<header>
 	<a href="#" class="logo">[Ayanfe]:)</a>
 	    <ul>
-			<li><a href="file:///Users/ayanfe/Desktop/Final%20PItch/index.html" class="active">Finish</a></li>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="/Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html" class="active">Finish</a></li>
+			<li><a href="/Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html">Home</a></li>
+			<li><a href="/Users/ayanfe/Desktop/About/index.html">About</a></li>
+			<li><a href="/Users/ayanfe/Desktop/Contact/index.html">Contact</a></li>
 		</ul>
 	</header>
 
