--- a/Final PItch/1/Pages/1/1.4/1.5/1.6/2/4/5/6/index.html
+++ b/Final PItch/1/Pages/1/1.4/1.5/1.6/2/4/5/6/index.html
@@ -10,9 +10,9 @@
 		<a href="#" class="logo">[Ayanfe]:)</a>
 		<ul>
 			<li><a href="./7/index.html" class="active">Next</a></li>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="/Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html">Home</a></li>
+			<li><a href="/Users/ayanfe/Desktop/About/index.html">About</a></li>
+			<li><a href="/Users/ayanfe/Desktop/Contact/index.html">Contact</a></li>
 	</header>
 	<section>
 		<img src="./Images/stars.png" id="stars">
