--- a/Final PItch/index.html
+++ b/Final PItch/index.html
@@ -13,8 +13,8 @@
 		<ul>
 			<li><a href="./1/index.html" class="active">Next</a></li>
 			<li><a href="#">Home</a></li>
-			<li><a href="./About/index.html">About</a></li>
-			<li><a href="./Contact/index.html">Contact</a></li>
+			<li><a href="/About/index.html">About</a></li>
+			<li><a href="/Contact/index.html">Contact</a></li>
 		</ul>
 	</header>
 
