--- a/Final PItch/1/About/index.html
+++ b/Final PItch/1/About/index.html
@@ -11,7 +11,7 @@
 	<header>
 		<a href="#" class="logo">[Ayanfe]:)</a>
 		<ul>
-			<li><a href="/Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html" class="active">Home</a></li>
+			<li><a href="https://ayanfe-droid.github.io/Final%20PItch/" class="active">Home</a></li>
 			<li><a href="#">About</a></li>
 			<li><a href="/Users/ayanfe/Desktop/Contact/index.html">Contact</a></li>
 		</ul>
