--- a/Final PItch/About/index.html
+++ b/Final PItch/About/index.html
@@ -13,7 +13,7 @@
 		<ul>
 			<li><a href="./Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html" class="active">Home</a></li>
 			<li><a href="#">About</a></li>
-			<li><a href="/Contact/index.html">Contact</a></li>
+			<li><a href="./Contact/index.html">Contact</a></li>
 		</ul>
 	</header>
 
