--- a/Final PItch/Contact/index.html
+++ b/Final PItch/Contact/index.html
@@ -11,7 +11,7 @@
 	<header>
 		<a href="#" class="logo">[Ayanfe]:)</a>
 		<ul>
-			<li><a href="./Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html" class="active">Home</a></li>
+			<li><a href="/Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html" class="active">Home</a></li>
 			<li><a href="/About/index.html">About</a></li>
 			<li><a href="#">Contact</a></li>
 		</ul>
