--- a/Final PItch/1/Pages/1/index.html
+++ b/Final PItch/1/Pages/1/index.html
@@ -11,7 +11,7 @@
 		<a href="#" class="logo">[Ayanfe]:)</a>
 		<ul>
 			<li><a href="./1.4/index.html" class="active">Next</a></li>
-			<li><a href="/Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html">Home</a></li>
+			<li><a href="./Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html">Home</a></li>
 			<li><a href="./About/index.html">About</a></li>
 			<li><a href="./Contact/index.html">Contact</a></li>
 		</ul>
