--- a/Final PItch/1/Pages/1/1.4/index.html
+++ b/Final PItch/1/Pages/1/1.4/index.html
@@ -13,7 +13,8 @@
 			<li><a href="./1.5/index.html" class="active">Next</a></li>
 			<li><a href="/Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html">Home</a></li>
 			<li><a href="./About/index.html">About</a></li>
-			<li><a href="./Contact/index.html">Contact</a></li>
+			<li><a href="./Contact/index.html">Contact</a
+			></li>
 		</ul>
 	</header>
 
