--- a/Final PItch/index.html
+++ b/Final PItch/index.html
@@ -14,7 +14,7 @@
 			<li><a href="./1/index.html" class="active">Next</a></li>
 			<li><a href="#">Home</a></li>
 			<li><a href="./Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch//About/index.html">About</a></li>
-			<li><a href="./Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/Contact/index.html">Contact</a></li>
+			<li><a href="Contact/index.html">Contact</a></li>
 		</ul>
 	</header>
 
