--- a/Final PItch/About/index.html
+++ b/Final PItch/About/index.html
@@ -11,8 +11,8 @@
 	<header>
 		<a href="#" class="logo">[Ayanfe]:)</a>
 		<ul>
-			<li><a href="./Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html" class="active">Home</a></li>
-			<li><a href="#">About</a></li>
+			<li><a href="./Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html">Home</a></li>
+			<li><a href="#" class="active">About</a></li>
 			<li><a href="./Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/Contact/index.html">Contact</a></li>
 		</ul>
 	</header>
