--- a/Final PItch/About/index.html
+++ b/Final PItch/About/index.html
@@ -11,9 +11,9 @@
 	<header>
 		<a href="#" class="logo">[Ayanfe]:)</a>
 		<ul>
-			<li><a href="./Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html">Home</a></li>
+			<li><a href="./Users/ayanfe/iCloud Drive/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html">Home</a></li>
 			<li><a href="#" class="active">About</a></li>
-			<li><a href="./Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/Contact/index.html">Contact</a></li>
+			<li><a href="./Contact/index.html">Contact</a></li>
 		</ul>
 	</header>
 
