--- a/Final PItch/About/index.html
+++ b/Final PItch/About/index.html
@@ -13,7 +13,7 @@
 		<ul>
 			<li><a href="./Users/ayanfe/iCloud Drive/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html">Home</a></li>
 			<li><a href="#" class="active">About</a></li>
-			<li><a href="./Contact/index.html">Contact</a></li>
+			<li><a href="https://ayanfe-droid.github.io/Final%20PItch/Contact/index.html">Contact</a></li>
 		</ul>
 	</header>
 
