--- a/Final PItch/1/Contact/index.html
+++ b/Final PItch/1/Contact/index.html
@@ -11,9 +11,10 @@
 	<header>
 		<a href="#" class="logo">[Ayanfe]:)</a>
 		<ul>
-			<li><a href="https://ayanfe-droid.github.io/Final%20PItch/" class="active">Home</a></li>
-			<li><a href="/Users/ayanfe/Desktop/About/index.html">About</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="https://ayanfe-droid.github.io/Final%20PItch/" 
+		  >Home</a></li>
+			<li><a href="https://ayanfe-droid.github.io/Final%20PItch/About/index.html">About</a></li>
+			<li><a href="#" class="active">Contact</a></li>
 		</ul>
 	</header>
 
