--- a/Final PItch/1/index.html
+++ b/Final PItch/1/index.html
@@ -14,8 +14,8 @@
 		<ul>
 			<li><a href="./Pages/1/index.html" class="active">Next</a></li>
 			<li><a href="./Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html">Home</a></li>
-			<li><a href="/About/index.html">About</a></li>
-			<li><a href="/Contact/index.html">Contact</a></li>
+			<li><a href="./About/index.html">About</a></li>
+			<li><a href="./Contact/index.html">Contact</a></li>
 		</ul>
 	</header>
 
