--- a/Final PItch/Contact/index.html
+++ b/Final PItch/Contact/index.html
@@ -12,7 +12,7 @@
 		<a href="#" class="logo">[Ayanfe]:)</a>
 		<ul>
 			<li><a href="./Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html">Home</a></li>
-			<li><a href="./Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/About/index.html">About</a></li>
+			<li><a href="https://ayanfe-droid.github.io/Final%20PItch/About/index.html">About</a></li>
 			<li><a href="#" class="active">Contact</a></li>
 		</ul>
 	</header>
