--- a/Final PItch/About/index.html
+++ b/Final PItch/About/index.html
@@ -11,7 +11,7 @@
 	<header>
 		<a href="#" class="logo">[Ayanfe]:)</a>
 		<ul>
-			<li><a href="./Users/ayanfe/iCloud Drive/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html">Home</a></li>
+			<li><a href=".https://ayanfe-droid.github.io/Final%20PItch/">Home</a></li>
 			<li><a href="#" class="active">About</a></li>
 			<li><a href="https://ayanfe-droid.github.io/Final%20PItch/Contact/index.html">Contact</a></li>
 		</ul>
