--- a/Final PItch/1/index.html
+++ b/Final PItch/1/index.html
@@ -13,7 +13,7 @@
 		<a href="#" class="logo">[Ayanfe]:)</a>
 		<ul>
 			<li><a href="./Pages/1/index.html" class="active">Next</a></li>
-			<li><a href="./Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html">Home</a></li>
+			<li><a href="https://ayanfe-droid.github.io/Final%20PItch/">Home</a></li>
 			<li><a href="./About/index.html">About</a></li>
 			<li><a href="./Contact/index.html">Contact</a></li>
 		</ul>
