--- a/Final PItch/1/Pages/1/1.4/1.5/1.6/2/4/5/index.html
+++ b/Final PItch/1/Pages/1/1.4/1.5/1.6/2/4/5/index.html
@@ -16,7 +16,7 @@
             <a href="#" class="logo">[Ayanfe]:)</a>
             <ul>
                 <li><a href="./6/index.html" class="active">Next</a></li>
-                <li><a href="/Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html">Home</a></li>
+                <li><a href="https://ayanfe-droid.github.io/Final%20PItch/">Home</a></li>
                 <li><a href="./About/index.html">About</a></li>
                 <li><a href="./Contact/index.html">Contact</a></li>
             </ul>
