--- a/Final PItch/1/Pages/1/1.4/1.5/1.6/2/4/5/6/7/8/9/10/10.1/11/12/13/index.html
+++ b/Final PItch/1/Pages/1/1.4/1.5/1.6/2/4/5/6/7/8/9/10/10.1/11/12/13/index.html
@@ -10,8 +10,8 @@
 	<header>
 	<a href="#" class="logo">[Ayanfe]:)</a>
 	    <ul>
-			<li><a href="/Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html" class="active">Finish</a></li>
-			<li><a href="/Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html">Home</a></li>
+			<li><a href="https://ayanfe-droid.github.io/Final%20PItch/" class="active">Finish</a></li>
+			<li><a href="https://ayanfe-droid.github.io/Final%20PItch/">Home</a></li>
 			<li><a href="./About/index.html">About</a></li>
 			<li><a href="./Contact/index.html">Contact</a></li>
 		</ul>
