--- a/Final PItch/1/Pages/1/1.4/1.5/1.6/2/4/5/6/7/8/9/10/10.1/11/12/About/index.html
+++ b/Final PItch/1/Pages/1/1.4/1.5/1.6/2/4/5/6/7/8/9/10/10.1/11/12/About/index.html
@@ -11,9 +11,9 @@
 	<header>
 		<a href="#" class="logo">[Ayanfe]:)</a>
 		<ul>
-			<li><a href="/Users/ayanfe/Desktop/sites/Ayanfe-droid.github.io/Final PItch/index.html" class="active">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="/Users/ayanfe/Desktop/Contact/index.html">Contact</a></li>
+		  <li><a href="https://ayanfe-droid.github.io/Final%20PItch/">Home</a></li>
+			<li><a href="#" class="active">About</a></li>
+			<li><a href="https://ayanfe-droid.github.io/Final%20PItch/Contact/index.html">Contact</a></li>
 		</ul>
 	</header>
 
